# viral-ngs

./: .agignore  .codecov.yml  .coveragerc  .coveralls.yml  .dockerignore  .flake8  .gitattributes  .gitignore  .landscape.yaml  .old-travis.yml  .pylintrc  .readthedocs.yml  .style.yapf  .travis.yml  AGENTS.md  AGENT_CONTEXT.md  CLAUDE.md  DEVELOPMENT_NOTES.md  Dockerfile  LICENSE  MONOREPO_IMPLEMENTATION_PLAN.md  README.md  assembly.py  broad_utils.py  conftest.py  consensus.py  data_utils.py  file_utils.py  illumina.py  install_tools.py  interhost.py  intrahost.py  kmer_utils.py  kmers.py  metadata_utils.py  metagenomics.py  ncbi.py  pipe_utils.py  pyproject.toml  pytest.ini  (+22 more)
.github/workflows/: build.yml  ci.yml  cleanup-images.yml  docker.yml  docs.yml
.planning/: PROJECT.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
branch-info/: is-1808081312-add-bbmap.org
contrib/: post-checkout  post-merge  pre-commit  update-conda-env.sh
docker/: Dockerfile  Dockerfile.assemble  Dockerfile.baseimage  Dockerfile.classify  Dockerfile.core  Dockerfile.mega  Dockerfile.phylo  README.md  calc_mem.py  calc_mem.sh  container_environment.sh  env_wrapper.sh  gosu-entrypoint.sh  install-conda-dependencies.sh  install-conda-deps.sh  install-gatk.sh  install-skeleton.sh  install-viral-ngs.sh  mem_in_gb_90.sh  mem_in_mb_50.sh  mem_in_mb_80.sh  mem_in_mb_85.sh  mem_in_mb_90.sh  mem_in_mb_95.sh  run_tile_count.sh  rundocker.sh
docker/easy-deploy-script/: easy-deploy-viral-ngs.sh
docker/requirements/: assemble.txt  baseimage.txt  classify-kraken.txt  classify-x86.txt  classify.txt  core-x86.txt  core.txt  phylo-x86.txt  phylo.txt
docker/scripts/: calc_mem.py
docs/: Makefile  assembly.rst  broad_utils.rst  cmdline.rst  conf.py  description.rst  development.rst  file_utils.rst  illumina.rst  index.rst  install.rst  interhost.rst  intrahost.rst  kmer_utils.rst  kmers.rst  metagenomics.rst  ncbi.rst  pipes-snakemake.rst  pipes-wdl.rst  pipeuse.rst  read_utils.rst  reports.rst  requirements.txt  taxon_filter.rst
docs/_templates/: layout.html
easy-deploy/: Vagrantfile  ansible-playbook.yml  conda_setup.sh  run.sh  venv_exec.j2
easy-deploy-broad/: README.md  easy-deploy-viral-ngs-broad.sh  viral-ngs-broad.sh
easy-deploy-docker/: Dockerfile  README.md
easy-deploy-script/: README.md  easy-deploy-viral-ngs-broad.sh  easy-deploy-viral-ngs.sh
easy-deploy-virtualized/: Vagrantfile  ansible.cfg  run.sh
easy-deploy/data/: README.txt
github_actions_ci/: activate-conda.sh  before_install.sh  build-conda.sh  build-docs.sh  deploy-docker.sh  install-conda-build.sh  install-conda.sh  install-pip-docs.sh  install-pip.sh  install-tools.sh  list-docker-tags.sh  tests-docker.sh
old-scripts/dpark/: gene_stats.py  snp_call.py
old-scripts/iSNV/: iSNV-pipeline-edited.txt  iSNV-pipeline.txt
old-scripts/kga/: assembly_pipeline_v1.sh  ebov_assembly.sh  human_depletion.sh  snp_calling.sh  trees.sh  viral_pipeline_description.txt
old-scripts/rsealfon/: call_snps_3.py  filter_short_seqs.py
packaging/conda-recipe/: render-recipe.py
pipes/: Snakefile  config.json  config.yaml  jobscript.sh  lsf-broad-submit.py  run-pipe.sh  run-pipe_local.sh
pipes/Broad_LSF/: README  cluster-submitter.py  jobscript.sh  logfile-profiler.py  lsf-report.py  run-pipe.sh  setup_dotkits.sh
pipes/Broad_UGER/: README  cluster-submitter.py  jobscript.sh  run-pipe.sh
pipes/Broad_common/: setup_dotkits.sh
pipes/WDL/: cromwell.broad-sabeti-lab.conf  cromwell.gcid-viral-seq.conf  dx-defaults-assemble_denovo.json  dx-defaults-assemble_denovo_with_deplete.json  dx-defaults-assemble_denovo_with_deplete_and_isnv_calling.json  dx-defaults-assemble_denovo_with_isnv_calling.json  dx-extras.json  (+12 more)
scripts/: __init__.py  add_base_class_imports.py  fasta-trim-terminal-ambigs.pl  fix_module_usages.py  fix_test_usages.py  fix_util_imports.py  fix_util_usages.py  maf-convert.last-490.2to3.py  mergeShuffledFastqSeqs.pl  noBlastHits_v3.py  noBlastLikeHits.py  refactor_to_core.py  rewrite_core_imports.py  rewrite_imports.py  rewrite_test_imports.py
test/: __init__.py  conftest.py  stubs.py  test_consensus.py  test_interhost.py  test_intrahost.py  test_ncbi.py  test_read_utils.py  test_taxon_filter.py  test_tools.py  test_tools_bwa.py  test_tools_novoalign.py  test_util_annot.py  test_util_vcf.py  util_annot_test.py  util_vcf_test.py  viral_test.py
tests/: __init__.py  conftest.py  test_assembly.py  test_consensus.py  test_interhost.py  test_intrahost.py  test_ncbi.py  test_read_utils.py  test_taxon_filter.py  test_tools.py  test_tools_bwa.py  test_tools_novoalign.py  test_tools_samtools.py  test_util_vcf.py  test_viral.py  util_annot_test.py  util_vcf_test.py  viral_test.py
tools/: __init__.py  bbmap.py  bedtools.py  blast.py  bmtagger.py  bwa.py  cdhit.py  clark.py  diamond.py  fastqc.py  gap2seq.py  gatk.py  infernal.py  kaiju.py  kmc.py  kraken.py  krona.py  last.py  mafft.py  megan.py  mosaik.py  mummer.py  muscle.py  mvicuna.py  novoalign.py  picard.py  prinseq.py  prodigal.py  samtools.py  snpeff.py  spades.py  tabix.py  tbl2asn.py  trimmomatic.py  trinity.py  vphaser.py  vphaser2.py
travis/: before_install.sh  build-and-deploy.sh  build-conda.sh  build-docs.sh  build-dx.sh  build-package.sh  deploy-docker.sh  deploy.sh  flake8.sh  install-conda-build.sh  install-conda.sh  install-gatk.sh  install-pip-docs.sh  install-pip.sh  install-tools.sh  install-wdl.sh  list-docker-tags.sh  setup-coverage.sh  tests-cromwell.sh  tests-docker.sh  tests-dx.sh  tests-long.sh  tests-pytest.sh  tests-snakemake.sh  tests-unit.sh  trigger-tests-in-other-repo.sh  trigger-travis.sh  upgrade-docker.sh  validate-wdl.sh  version-wdl-runtimes.sh
util/: annot.py  argparse_arg_types.py  bam_stats_plugin.py  cmd.py  cmd_plugins.py  fasta_stats_plugin.py  feature_table.py  file.py  files.py  genbank.py  illumina_adapters.py  illumina_indices.py  metadata.py  misc.py  noBlastLikeHits.py  provenance.py  read_utils.py  stats.py  util_vcf.py  vcf.py  version.py
(+1080 files in other folders)
