[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "viral-ngs"
dynamic = ["version"]
description = "Consolidated tools for viral NGS data analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Broad Institute Viral Genomics", email = "viral-ngs@broadinstitute.org" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["bioinformatics", "genomics", "viral", "ngs", "sequencing"]
# All runtime dependencies are installed via conda for faster installation
# and better binary compatibility. See docker/requirements/core.txt
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist",
    "pytest-cov",
]
terra = [
    "firecloud>=0.16.35",
]

[project.urls]
Homepage = "https://github.com/broadinstitute/viral-ngs"
Repository = "https://github.com/broadinstitute/viral-ngs"
Issues = "https://github.com/broadinstitute/viral-ngs/issues"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
